# Pathfinder

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.ui
core/include/: Broker.h  Field.h  Graph.h  IWorker.h  Worker.h  utils.h
core/src/: BrokerBfs.cpp  Field.cpp  Worker.cpp  utils.cpp
gui/: Cells.cpp  Cells.h  Manager.cpp  Manager.h  MyGraphicsView.h  PathFinder.h  Scene.cpp  Scene.h  Scene_.cpp  Scene_.h  VectorHolder.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
gui/control/: Manager.cpp  Manager.h  PathFinder.h  VectorHolder.h
gui/sceneItems/: AWayPoint.cpp  AWayPoint.h  AbstractCell.h  AbstractWayPoint.h  BWayPoint.cpp  BWayPoint.h  MovableCell.cpp  MovableCell.h  PathLine.cpp  PathLine.h  WallCell.cpp  WallCell.h
